apps/sga/src/app/locations/list/list.component.scss
table {
  width: 100%;
}

.fab-row-actions {
  position: fixed;
  bottom: 4.5rem;
  width: 100%;
  right: 3rem;
}

.example-container {
  height: 80vh;
  overflow: auto;
}
.mat-cell, .mat-header-cell {
  padding: 10px 10px 10px 0;
}
.previous-page-link {
  cursor: pointer;
  color: #979797;
}

// Test expanded rows

.example-container {
  display: flex;
  flex-direction: column;
  min-width: 300px;
}

.mat-table {
  overflow: auto;
}

.element-row {
  position: relative;
}

.element-row:not(.expanded) {
  cursor: pointer;
}

.element-row:not(.expanded):hover {
  background: #f5f5f5;
}

.element-row.expanded {
  border-bottom-color: transparent;
}

.element-detail {
  width: auto;
  tr {
    height: 24px;
  }
  td {
    height: 24px;
    width: 24px;
    outline: none;
    outline-offset: 0;
    background: rgba(33, 33, 33, 0.12);
  }
  td.location-free {
    outline: 3px solid #000;
    outline-offset: -3px;
    background: #fff;
  }
  td.location-disabled {
    background: #fff;
    background-image: url('../../../assets/img/md-close.svg');
    background-position: center;
  }
  td.location-selected {
    outline: 3px solid #0c9d58;
    outline-offset: -3px;
    background: rgba(12, 157, 88, 0.12);
    background-image: url('../../../assets/img/md-check.svg');
    background-position: center;
  }
}

.collapsed-detail {
  padding: 0;
}

